--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Results controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+td#col_1{
+  width:100px;
+  background-color :#FF0000;
+  color:#FFE2C4;
+}
+td#col_2{
+  background-color:#DABB41;
+  color:#000000;
+  font-size:110%;
+  font-weight:bold;
+}
