--- a/app/assets/stylesheets/generators.css.scss
+++ b/app/assets/stylesheets/generators.css.scss
@@ -1,124 +1,104 @@
 // Place all the styles related to the Generators controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-div.page{
-  width:1330px;
-  header
-  {
-      font-family: arial;
-      text-align: center;
-      background-color: #A68750;
-      
-      h1{
-      padding: 10px 5px 10px 5px;
-      color:#000000;
-      background-color: #A68750;
-        }
-     
-      nav{
-        padding: 5px 5px 5px 5px;
-        background-color: #B39768;
-         }
-      
-      nav #home,#new,#view{
-        font-family: "Arial black",serif;
-        text-decoration:none;
-        color:#FFFFFF;
-        margin-right:100px;
-        background-color:#B39768;
-       }
-  }
-
-      div#form{
-          width: 750px;
-          margin-left:auto;
-          margin-right:auto;
-          h2{
-            text-align:center;
-          }
-          fieldset.primer,fieldset.sample{
-                  border:2px solid #0000CC;
-                  border-radius: 20px;
-                  padding:20px;
-                  text-align:center;
-            }
+//generator form CSS  
+div#form{
+     width: 750px;
+     margin-left:auto;
+     margin-right:auto;
+     h2{
+          text-align:center;
+     }
+     fieldset.primer,fieldset.sample{
+          border:2px solid #0000CC;
+          border-radius: 20px;
+          padding:20px;
+          text-align:center;
+     }
          
-          table.primer{
-                  width:700px;
-                  border-collapse: collapse;
-            }
+     table.p_gen{
+          width:700px;
+          border-collapse: collapse;
+     }
   
-          th.primer,td.primer{
-                  border:1px solid #000000;
-            }
-          td.primer{
-                  padding:10px;
-            }
+     th,td{
+          border:1px solid #000000;
+     }
+     td.primer{
+          padding:10px;
+     }
                 
-          legend{
-                  color:#FFFFFF;
-                  background-color: #FF0000;
-                  border: 1px solid #dcdcdc;
-                  border-radius: 20px;
-                  padding: 10px 20px;
-                  font-size:110% ;
-                  letter-spacing:0.05em;
-                  word-spacing:0.15em;
-                  text-align: left;
-            }
+     legend{
+          color:#FFFFFF;
+          background-color: #FF0000;
+          border: 1px solid #dcdcdc;
+          border-radius: 20px;
+          padding: 10px 20px;
+          font-size:110% ;
+          letter-spacing:0.05em;
+          word-spacing:0.15em;
+          text-align: left;
       }
 }
 
-table.index{
-  width:1310px;
-  border-collapse: collapse;
-  
-      th.index{
-        background-color:#85C4CB;
-        color:#000000;
-        border:1px solid #000000;
-      }
-      
-          tr.index:hover{
-            background-color:#9999CC;
-          }
-          tr.index{
-            width:1310px;
-            background-color:#B6FFCF;
-            color:#000000;
-          }
-          
-              td#rpg_col{
-                width:280px;
-                border:1px solid #000000;
-              }
-              td#gs_col{
-                width:400px;
-                border:1px solid #000000;
-              }
-              td#no_col{
-                width:60px;
-                border:1px solid #000000;
-              }
-              td#sstring_col{
-                width:90px;
-                text-align:center;
-                border:1px solid #000000;
-              }
-              td#string_col{
-                width:100px;
-                text-align:center;
-                border:1px solid #000000;
-              }
-              td#change{
-                text-align:center;
-                text-decoration: inline;
-                width:75px;
-                background-color:#FFFFFF;
-              }
-}
+//geneator index CSS
+#view_index{
+  width:1185px;
+  table.index{
+    position:static;
+    width:1185px;
+    border-collapse: collapse;
+  }
+        th{
+           position:static;
+           background-color:#CC0000;
+           color:#FFFFFF;
+           border:1px solid #000000;
+        }
+        th.no_col{
+                  position:static;
+                  width:55px;
+                }
+        th.sstring_col{
+                  position:static;
+                  width:90px;
+                  text-align:center;
+           
+                }
+        th.rpg_col{
+                  position:static;
+                  width:270px;
+                }
+        th.string_col{
+                  position:static;
+                  width:90px;
+                  text-align:center;
+                 
+                }
+        th.gs_col{
+                  position:static;
+                  width:390px;
+                 
+                }
 
+           /* tr.index:hover{
+              background-color:#0066CC;
+            } */
+        td{
+              position:static;
+              width:1185px;
+              background-color:#B6FFCF;
+              color:#000000;
+        }
+        td#change{
+                  position:static;
+                  text-align:center;
+                  text-decoration: inline;
+                  width:75px;
+                  background-color:#FFFFFF;
+        }
+}
+// Form [show] - to generate result binding 
 div.result_show{
        text-align:center;
         
@@ -153,4 +133,9 @@ div.result_show{
                         text-align: left;
                     }
                  }
+}
+
+//Generator form button
+.Gbutton_class{
+  font-size: 18px;
 }
