--- a/app/views/results/_form.html.erb
+++ b/app/views/results/_form.html.erb
@@ -1,31 +1,26 @@
-<%= form_for([@generator, @generator.build_result]) do |f| %>
+<%= form_for([@generator,@generator.build_result(params[:result])]) do |f|%>
 <script>
-			$(document).ready(function(){
-				 $("#accession_number").click(function() 
-				 	  {
-				    	$("#FASTA").hide();
-				    	$("#highlight").hide();
-				 	  })
-				 $("#FASTA").click(function()
-				 	  {
-				
-				 		$("#accession_number").hide()
-				 		$("#highlight").hide();
-				 	  })
-					  
-			    $("#reset").click(function()
-				 	  {
-				 		$("#accession_number").show();
-				 		$("#FASTA").show();
-				 		$("#highlight").show();
-				 	  })
-			});
+$(document).ready(function(){
+		$("#accession_number").click(function(){
+			$("#FASTA").hide();
+			$("#highlight").hide();
+		})
+		$("#FASTA").click(function(){
+			$("#accession_number").hide();
+			$("#highlight").hide();
+		})	  
+		$("#reset").click(function(){
+			$("#accession_number").show();
+			$("#FASTA").show();
+			$("#highlight").show();
+		})
+});
 </script>
 
   <font size ="6">*** <u>Choose ONE of the input methods</u> *** </font>
   <p id="accession_number">
     <label><strong><font size ="3">NCBI accession number:</font></strong></label><br />
-  <%= f.text_field :ncbi_ref_seq , :value => '', placeholder: 'Accession Number'%>
+  <%= f.text_field(:ncbi_ref_seq,placeholder: 'Accession Number')%>
   </p>
   
   <p id="highlight"><font size ="5">
@@ -34,9 +29,9 @@
   
   <p id="FASTA">
   	<strong><font size ="3">Paste your sequence here: ( FASTA format ) :</font></strong> 
- 	<%= f.text_area(:genome_seq, size: "50x10",:value => '',placeholder: 'Input your sequence here') %>
+ 	<%= f.text_area(:genome_seq,size: "50x10",placeholder: 'Input your sequence here')%>
  </p>
   
   <input type="reset" value="Reset" id="reset">
-    <%= f.submit 'Analyze' %>
+  <%= f.submit 'Analyze'%>
 <% end %>
