correction on server

--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -30,11 +30,11 @@
 			        <td id="col_2"><%= @result.genome_sample %></td>
 				</tr>
 				<tr>
-					<td id="col_1"><strong>Primer Binding Times</strong></td>
+					<td id="col_1"><strong>Number of Priming Sites</strong></td>
 			        <td id="col_2"><%= @result.binding_times %></td>
 				</tr>		
 				<tr>
-					<td id="col_1"><strong>Estimated Number of Fragments</strong></td>
+					<td id="col_1"><strong>Estimated Number of Amplifiable Fragments (200-2000 bp)</strong></td>
 			        <td id="col_2"><%= @result.amp_frags %></td>
 				</tr>	
 				<tr>
