--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
 						<a href="/auth/facebook">
 								  <%= image_tag "facebook_64.png", :size => "40x40", :alt => "Facebook" %>
 						</a>
-						<a href="/auth/google_apps">
+						<a href="/auth/google">
 								  <%= image_tag "google_64.png", :size => "40x40", :alt => "Google" %>
 						</a>
 					</div>
