--- a/app/views/generators/show.html.erb
+++ b/app/views/generators/show.html.erb
@@ -22,7 +22,7 @@
 		<legend><strong>Binding Time Analysis</strong></legend>
 	<%= render "results/form" %>
 	</fieldset>
-
+</div>
 <br />
 
 <%= link_to 'Back', generators_path %>
