--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -14,6 +14,10 @@
 					<td id="col_2"><%=@result.generator.random_primer_generated %></td>
 				</tr>
 				<tr>
+					<td id="col_1"><strong>GC%</strong></td>
+					<td id="col_2"><%=@result.generator.percent_gc%> %</td>
+				</tr>
+				<tr>
 					<td id="col_1"><strong>Melting Temperature</strong></td>
 					<td id="col_2"><%=@result.generator.melting_temp %> <sup>o</sup>C</td>
 				</tr>
