--- a/app/views/generators/_form.html.erb
+++ b/app/views/generators/_form.html.erb
@@ -1,12 +1,21 @@
 <html>
 <script>
-$(document).ready(function() {
- var total = 0;
- $.each($(':input'), function(){
-   total += parseInt($(this).val(), 10); //use radix 10 to ensure correct parseInt val
- });
- $("span").text(i);
+$(document).on("keyup change", ".bases", function() {
+  totalSides();
 });
+
+function totalSides() {
+  var tmp = 0;
+  var total = 0;
+  $(".bases").each(function() {
+    tmp = parseInt($(this).val(), 10);
+    if (isNaN(tmp)) {
+      tmp = 0;
+    };
+    total = total + tmp;
+  });
+  $("#total-bases").html(total);
+};
 </script>
 <body >
 <%= form_for(@generator) do |f| %>
@@ -23,6 +32,12 @@ $(document).ready(function() {
 		<% else %>
 		<fieldset class ="primer">
 		<legend><strong>Method Use :</strong></legend><br>  
+			<b>Concentration of dNTPs (mM):</b>
+			<%= number_field_tag(:dNTP,nil,:min=>0,:step => 0.1)%><br />
+			<b>Concentration of monovalent cations (mM):</b>
+			<%= number_field_tag(:monovalent,nil,:min=>0,:step =>0.1)%><br />
+			<b>Concentration of divalent cations (mM):</b>
+			<%= number_field_tag(:divalent,nil,:min=>0,:step => 0.1)%><br />
 		    <h3 align="left"><font size ="5"><b>Step 1: <u>Choose only ONE of the methods</u></font></b></h3> 
 		<table class="p_gen">
 			<thead>
@@ -51,14 +66,15 @@ $(document).ready(function() {
 			  	<td class="method2">
 			  		<p>Input the number of each base the primer should have</p>
 			  		<label>Number of A :</label>
-			  		<%= number_field_tag(:no_A,nil, in:0...36) %><br />
+			  		<%= number_field_tag(:no_A,nil, in:0...36,class: 'bases') %><br />
 				  	<label>Number of T :</label>
-				  	<%= number_field_tag(:no_T,nil, in:0...36) %><br />
+				  	<%= number_field_tag(:no_T,nil, in:0...36,class: 'bases') %><br />
 				  	<label>Number of G :</label>
-				  	<%= number_field_tag(:no_G,nil, in:0...36) %><br />
+				  	<%= number_field_tag(:no_G,nil, in:0...36,class: 'bases') %><br />
 				  	<label>Number of C :</label>
-				  	<%= number_field_tag(:no_C,nil, in:0...36) %><br />
-				  	Total bases:<span></span>
+				  	<%= number_field_tag(:no_C,nil, in:0...36,class: 'bases') %><br />
+				  	<br/>
+				  	<b>Total bases:<span id="total-bases"></span></b>
 				</td> 	
 				<td class="method3">
 				  	<p> Input your preference sequence (only IUPAC nucleotide).</p>
