--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,8 @@
 						<a href="/auth/facebook">
 								  <%= image_tag "facebook_64.png", :size => "40x40", :alt => "Facebook" %>
 						</a>
-						<a href="/auth/google">
-								  <%= image_tag "google_64.png", :size => "40x40", :alt => "Google" %>
+						<a href="/auth/google_oauth2">
+								  <%= image_tag "google_64.png", :size => "40x40" %>
 						</a>
 					</div>
 
